# r2r-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
app/: server.py
docs/: advanced-rag.txt  agentic-rag.txt  application.txt  aws.txt  azure.txt  collections.txt  contextual-enrichment.txt  conversations.txt  deduplication.txt  docs.txt  documents.txt  email.txt  embedding.txt  evals.txt  full.txt  gcp.txt  graphs.txt  hybrid-search.txt  ingestion.txt  introduction.txt  light.txt  limits.txt  llm.txt  local-llms.txt  local-rag.txt  logging.txt  maintenance.txt  mcp.txt  orchestration.txt  overview.txt  postgres.txt  prompts.txt  quickstart.txt  rag.txt  sciphi.txt  search-and-rag.txt  structured-output.txt  system.txt  telemetry.txt  walkthrough.txt  (+3 more)
tests/: __init__.py  conftest.py  test_r2r_mcp.py  test_r2r_mcp_integration.py  test_r2r_mcp_performance.py
